--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # This file includes global variables that will be available inside your project
 # In the app.py file, you can access the variable by importing os and then using print(os.getenv('VARIABLE_NAME'))
 
-CLIENT_ID=your_client_id
-CLIENT_SECRET=your_client_secret
+CLIENT_ID="24649728ccb14996a202ef41da15feee"
+CLIENT_SECRET="0da6c854beac44ea9241e13dcc204b8b"
+
